--- a/clues/templates/ar.html
+++ b/clues/templates/ar.html
@@ -6,18 +6,23 @@
     padding: 40px 80px;
     font-size: 70px;
     border-radius: 10px;
+    }
 </style>
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12 align-self-center">
 			<h1 class="display-1 text-success text-center">
-                Test successful.
+                Next Clue
                 </h1>
             <h1 class="display-3 text-light text-center my-auto">
-                Your next clue will be found at the park.
+                Decipher the clue using Augmented Reality.
                 </h1>
                 <p></p>
                 <center>
+                <a href="https://github.com/samhorne/paradox2/blob/master/paradox2.usdz?raw=true" rel="ar">
+                    <img src="https://developer.apple.com/design/human-interface-guidelines/ios/images/ARKit_Glyph_Button.svg" alt="Tap Here">
+                    </a>
+                    <p></p>
                 <form action='/clues' method='GET'>
                 <button type="submit" class="btn btn-light btn-xl">Back</button>
                 </form>
