--- a/clues/templates/kro.html
+++ b/clues/templates/kro.html
@@ -6,15 +6,16 @@
     padding: 40px 80px;
     font-size: 70px;
     border-radius: 10px;
+    }
 </style>
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12 align-self-center">
 			<h1 class="display-1 text-success text-center">
-                Test successful.
+                Next Clue
                 </h1>
             <h1 class="display-3 text-light text-center my-auto">
-                Your next clue will be found at the park.
+                Head to the Appling Kroger. Check the price of ____ and enter it.
                 </h1>
                 <p></p>
                 <center>
