--- a/clues/templates/w3w.html
+++ b/clues/templates/w3w.html
@@ -6,15 +6,18 @@
     padding: 40px 80px;
     font-size: 70px;
     border-radius: 10px;
+    }
 </style>
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12 align-self-center">
 			<h1 class="display-1 text-success text-center">
-                Test successful.
+                First Clue
                 </h1>
             <h1 class="display-3 text-light text-center my-auto">
-                Your next clue will be found at the park.
+                <p>belong</p>
+                <p>lengths</p>
+                <p>timid</p>
                 </h1>
                 <p></p>
                 <center>
