add more clues, usdz

--- a/clues/templates/end.html
+++ b/clues/templates/end.html
@@ -15,7 +15,9 @@
                 Next Clue
                 </h1>
             <h1 class="display-3 text-light text-center my-auto">
-                Head to the Appling Kroger. Check the price of Peach Cottage Cheese and enter it.
+                <p>suiting</p>
+                <p>boots</p>
+                <p>stigmas</p>
                 </h1>
                 <p></p>
                 <center>
