--- a/clues/templates/darla.html
+++ b/clues/templates/darla.html
@@ -15,7 +15,9 @@
                 Next Clue
                 </h1>
             <h1 class="display-3 text-light text-center my-auto">
-                Head to the Appling Kroger. Check the price of Peach Cottage Cheese and enter it.
+                <p>getting</p>
+                <p>targets</p>
+                <p>weirder</p>
                 </h1>
                 <p></p>
                 <center>
