--- a/clues/templates/ar.html
+++ b/clues/templates/ar.html
@@ -19,7 +19,7 @@
                 </h1>
                 <p></p>
                 <center>
-                <a href="https://github.com/samhorne/scavengerhunt/blob/main/media/mask.usdz?raw=true" rel="ar">
+                <a href="https://developer.apple.com/augmented-reality/quick-look/models/biplane/toy_biplane.usdz" rel="ar">
                     <img src="https://developer.apple.com/design/human-interface-guidelines/ios/images/ARKit_Glyph_Button.svg" alt="Tap Here">
                     </a>
                     <p></p>
